--- a/src/app/main/general/dashboards/analysis/analysis.component.scss
+++ b/src/app/main/general/dashboards/analysis/analysis.component.scss
@@ -32,7 +32,7 @@
     }
 
     mat-card-content {
-        div[echarts] {
+        div.area-chart[echarts] {
             height: 50px;
             width: 100%;
         }
@@ -85,12 +85,54 @@
         color: #03a9f4; /*#1e88e5*/
     }
 
+    .font-medium {
+        font-weight: 500;
+    }
+
     .weather-card {
+        .mat-card-header-text {
+            margin: 0;
+            color: #5b616e;
+        }
+
         .realtime {
             mat-icon {
                 font-size: 45px !important;
             }
         }
+
+        .table {
+            width: 100%;
+            color: #9098ac;
+            font-size: 15px;
+
+            tr {
+                line-height: 40px;
+
+                td {
+                    width: 50%;
+                }
+            }
+        }
+
+        mat-card-actions {
+            padding-top: 20px;
+        }
+    }
+
+    .sales-card {
+        color: #9098ac;
+
+        .sales-prediction, .sales-difference {
+            width: 100%;
+            height: 150px;
+        }
+
+        .mat-card-header-text {
+            margin: 0;
+            color: #5b616e;
+        }
+
     }
     
 }
