--- a/src/app/main/general/dashboards/analysis/analysis.component.scss
+++ b/src/app/main/general/dashboards/analysis/analysis.component.scss
@@ -90,6 +90,8 @@
     }
 
     .weather-card {
+        color: #5b616e;
+        
         .mat-card-header-text {
             margin: 0;
             color: #5b616e;
@@ -117,6 +119,7 @@
 
         mat-card-actions {
             padding-top: 20px;
+            min-height: 50px;
         }
     }
 
@@ -125,7 +128,7 @@
 
         .sales-prediction, .sales-difference {
             width: 100%;
-            height: 150px;
+            height: 130px;
         }
 
         .mat-card-header-text {
