--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -4,9 +4,9 @@
 </div>
 <div class="navbar-scroll-container" notaddPerfectScrollbar [notaddPerfectScrollbarOptions]="{suppressScrollX: true, isInvisible: true}">
 
-    <div class="logo-wrap" [ngClass]="notaddConfig.layout.navbar.secondaryBackground" fxLayout="column">
+    <div class="logo-wrap" [ngClass]="notaddConfig.layout.navbar.secondaryBackground" fxLayout="column" fxHide.xs>
 
-        <div class="logo" [ngClass]="notaddConfig.layout.navbar.background" fxHide.xs>
+        <div class="logo" [ngClass]="notaddConfig.layout.navbar.background">
             <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo-circle" aria-hidden="true"></mat-icon>
         </div>
 
