--- a/src/app/main/general/dashboards/analysis/analysis.component.html
+++ b/src/app/main/general/dashboards/analysis/analysis.component.html
@@ -23,7 +23,7 @@
     </section>
 
     <section fxLayout="row wrap" fxLayout.gt-sm="row nowrap" fxLayoutAlign="space-between stretch" fxLayoutGap.md="15px" fxLayoutGap.gt-md="30px">
-        <mat-card class="card card-shadow weather-card p-24" fxFlex="49" fxFlex.lt-md="100" [ngClass.lt-md]="{'mb-32': true}">
+        <mat-card class="card card-shadow weather-card p-24" fxFlex="49" fxFlex.lt-md="100" ngClass.lt-md="mb-32">
             <mat-card-header>
                 <mat-card-title class="m-0" fxLayoutAlign="space-between end">
                     Weather Report
@@ -80,7 +80,7 @@
             </mat-card-actions>
         </mat-card>
         <div fxFlex="1 0 0%" fxFlex.lt-md="100" fxLayout="column nowrap">
-            <mat-card class="card card-shadow sales-card p-24 mb-20" [ngClass.lt-md]="{'mb-32': true}">
+            <mat-card class="card card-shadow sales-card p-24 mb-20" ngClass.lt-md="mb-32">
                 <mat-card-header>
                     <mat-card-title class="m-0">{{salesOption.prediction?.title}}</mat-card-title>
                 </mat-card-header>
@@ -116,7 +116,7 @@
     </section>
     
     <section fxLayout="row nowrap" fxLayout.lt-md="row wrap" fxLayoutAlign="space-between start" fxLayoutGap.gt-sm="30px">
-        <div class="card card-shadow" fxFlex="59" fxFlex.lt-md="100" [ngClass.lt-md]="{'mb-32': true}">
+        <div class="card card-shadow" fxFlex="59" fxFlex.lt-md="100" ngClass.lt-md="mb-32">
             <div class="scatter-map" echarts [options]="scatterMapOption"></div>
         </div>
         <div class="card card-shadow" fxFlex="39" fxFlex.lt-md="100">
