--- a/src/app/main/elements/basic-ui/icons/icons.component.html
+++ b/src/app/main/elements/basic-ui/icons/icons.component.html
@@ -18,18 +18,21 @@
         <mat-form-field class="w-100-p">
             <input matInput placeholder="Search an icon..." (input)="filterBaseIcons($event)">
         </mat-form-field>
-        <ng-container *ngFor="let category of filteredBaseIcons; let last = last;">
-            <div class="h3 mt-16">{{category.name}}</div>
-            <div fxLayout="row wrap">
-                <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center"
-                    *ngFor="let icon of category.icons">
-                    <mat-icon class="secondary-text s-48">{{icon.id}}</mat-icon>
-                    <div class="icon-name secondary-text mt-8">{{icon.id}}</div>
+
+        <div class="icon-list" notaddInfiniteScrollable scrollPercent="90" (scrollComplete)="onScrollComplete('base')">
+            <ng-container *ngFor="let category of base.filteredIcons; let last = last;">
+                <div class="h3 mt-16">{{category.name}}</div>
+                <div fxLayout="row wrap">
+                    <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center"
+                         *ngFor="let icon of category.icons">
+                        <mat-icon class="secondary-text s-48">{{icon.id}}</mat-icon>
+                        <div class="icon-name secondary-text mt-8">{{icon.id}}</div>
+                    </div>
                 </div>
-            </div>
-            <div class="m-32 secondary-text" *ngIf="category.icons.length === 0">No icon found.</div>
-            <mat-divider *ngIf="!last"></mat-divider>
-        </ng-container>
+                <div class="m-32 secondary-text" *ngIf="category.icons.length === 0">No icon found.</div>
+                <mat-divider *ngIf="!last"></mat-divider>
+            </ng-container>
+        </div>
     </div>
 
     <div class="content-card center mb-24" fxLayout="column nowrap">
@@ -38,14 +41,16 @@
         <mat-form-field class="w-100-p">
             <input matInput placeholder="Search an icon..." (input)="filterSvgIcons($event)">
         </mat-form-field>
-        <div fxLayout="row wrap">
-            <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center" 
-                *ngFor="let icon of filteredMdiIcons">
-                <mat-icon size="2" svgIcon="mdi:{{icon.name}}" class="secondary-text s-48"></mat-icon>
-                <div class="icon-name secondary-text mt-8">{{icon.name}}</div>
+        <div class="icon-list"  notaddInfiniteScrollable scrollPercent="90" (scrollComplete)="onScrollComplete('mdi')">
+            <div fxLayout="row wrap">
+                <div class="icon-holder m-16" fxLayout="column" fxLayoutAlign="center center"
+                    *ngFor="let icon of mdi.filteredIcons">
+                    <mat-icon size="2" svgIcon="mdi:{{icon.name}}" class="secondary-text s-48"></mat-icon>
+                    <div class="icon-name secondary-text mt-8">{{icon.name}}</div>
+                </div>
             </div>
+            <div class="m-32 secondary-text" *ngIf="filteredMdiIcons?.length === 0">No icon found.</div>
         </div>
-        <div class="m-32 secondary-text" *ngIf="filteredMdiIcons?.length === 0">No icon found.</div>
     </div>
 
 </div>
