--- a/src/app/main/elements/basic-ui/icons/icons.component.scss
+++ b/src/app/main/elements/basic-ui/icons/icons.component.scss
@@ -5,6 +5,13 @@
         background-color: #FFF;
     }
 
+    .icon-list {
+        width: 100%;
+        height: 500px;
+        overflow: hidden;
+        overflow-y: scroll;
+    }
+
     .icon-holder {
         width: 112px;
         height: 120px;
