--- a/src/app/main/elements/basic-ui/icons/icons.component.html
+++ b/src/app/main/elements/basic-ui/icons/icons.component.html
@@ -49,7 +49,7 @@
                     <div class="icon-name secondary-text mt-8">{{icon.name}}</div>
                 </div>
             </div>
-            <div class="m-32 secondary-text" *ngIf="filteredMdiIcons?.length === 0">No icon found.</div>
+            <div class="m-32 secondary-text" *ngIf="mdi.filteredIcons?.length === 0">No icon found.</div>
         </div>
     </div>
 
